--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,13 +7,15 @@
         {# {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %} #}
-        {% block stylesheets %}
+        {# {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
         {% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+        {% endblock %} #}
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     </head>
     <body class="bg-gray-50 font-sans antialiased">
     <!-- Navigation -->
